fix spacing and some comments

--- a/app/design/frontend/Avanti/innovation/web/css/source/common/_header.less
+++ b/app/design/frontend/Avanti/innovation/web/css/source/common/_header.less
@@ -37,7 +37,7 @@
         box-sizing: border-box;
         margin-left: auto;
         margin-right: auto;
-        max-width: 95%;
+        max-width: 80%;
         padding-left: @layout-indent__width;
         padding-right: @layout-indent__width;
         width: auto;
